cabal-version: 2.2

name:           sparcl
version:        0.2.0.0
synopsis:       A language for partial reversible computation with linear types
description:    
author:         Kazutaka Matsuda
maintainer:     kztk@ecei.tohoku.ac.jp
copyright:      2018 Kazutaka Matsuda
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
--    ChangeLog.md

common deps
  build-depends:
      base >=4.7 && <5,
--      ghc  >=8.4 && <8.8,
--      hint >= 0.8 && <1,
      exceptions >= 0.10 && <0.11, 
      time, 
      template-haskell, 
      mtl,
--      megaparsec >= 6.0 && <7, 
      megaparsec >= 6.0 && <9,
      containers, 
      directory, 
      filepath, 
      array, 
      haskeline, 
      deepseq,
      clock >= 0.6 && < 0.9, 
      fail, 
      ansi-wl-pprint

  ghc-options: 
      -Wall 

  if impl(ghc >= 8.8)
      ghc-options:
          -fwrite-ide-info 
          -hiedir=.hie

  default-language: Haskell2010

  default-extensions:
     FlexibleContexts, FlexibleInstances, 
     MultiParamTypeClasses, FunctionalDependencies, 
     MultiWayIf, LambdaCase, TupleSections, 
     RankNTypes, GADTs, ScopedTypeVariables, 
     TypeApplications, TypeOperators, 
     KindSignatures, DataKinds, 
     BangPatterns, PatternSynonyms, 
     DeriveFunctor, DeriveFoldable, DeriveTraversable, 
     GeneralizedNewtypeDeriving


library
  import: deps
  exposed-modules:  
      Language.Sparcl.Class
      Language.Sparcl.DebugPrint
      Language.Sparcl.Algorithm.SAT 
      Language.Sparcl.SrcLoc
      Language.Sparcl.Name
      Language.Sparcl.Pass
      Language.Sparcl.Literal
      Language.Sparcl.Multiplicity
      Language.Sparcl.FreeTyVars
      Language.Sparcl.Pretty
      Language.Sparcl.Typing.Type
      Language.Sparcl.Surface.Syntax
      Language.Sparcl.Surface.Parser.Helper
      Language.Sparcl.Surface.Parser.Id
      Language.Sparcl.Surface.Parser.Exp
      Language.Sparcl.Surface.Parsing
      Language.Sparcl.Renaming
      Language.Sparcl.Typing.TCMonad
      Language.Sparcl.Typing.Typing
      Language.Sparcl.Exception
      Language.Sparcl.Core.Syntax  
      Language.Sparcl.Desugar
      Language.Sparcl.Value
      Language.Sparcl.Eval
      Language.Sparcl.Module
      Language.Sparcl.Command 
      Language.Sparcl.REPL
      Language.Sparcl.CodeGen.Haskell
      Language.Sparcl.TH

  other-modules:

  hs-source-dirs:
      src

benchmark typing
  import: deps
  type: exitcode-stdio-1.0
  main-is: Bench.hs 

  hs-source-dirs:
    bench 

  ghc-options:
    -fprof-auto -O2 

  build-depends: 
    sparcl 


executable sparcl-exe  
  import: deps 
  main-is: Main.hs

  other-modules:

  hs-source-dirs:
      app
  ghc-options:
    -fprof-auto
    -- -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    sparcl,
    sparcl-runtime

test-suite sparcl-test
  import: deps 
  type: exitcode-stdio-1.0
  main-is: Spec.hs

  other-modules:
  hs-source-dirs:
      test
  ghc-options:
    -- -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    sparcl,
    sparcl-runtime

